--- a/app/src/main/res/layout/activity_latest_movie.xml
+++ b/app/src/main/res/layout/activity_latest_movie.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="lzl.edu.com.movierecommend.activity.fragment.HotMovieActivity">
-<TextView
-    android:text="最新电影"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    tools:context="lzl.edu.com.movierecommend.activity.fragment.LatestMovieFragment">
+
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/latestMovieRecyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+</android.support.v7.widget.RecyclerView>
+
 </RelativeLayout>
