--- a/app/src/main/res/layout/activity_movie_page.xml
+++ b/app/src/main/res/layout/activity_movie_page.xml
@@ -1,59 +1,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MoviePageActivity">
+    tools:context=".activity.NavigationDrawerActivity">
 
     <include layout="@layout/toolbar"/>
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:baselineAligned="false"
         android:background="@color/colorPrimary"
-        android:layout_height="50dp">
-        <TextView
-            android:id="@+id/comingSoonTextView"
-            android:textColor="@color/colorText"
-            android:gravity="center"
-            android:text="即将上映"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/hotMovieTextView"
-            android:textColor="@color/colorText"
-            android:gravity="center"
-            android:text="热评电影"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/youLoveTextView"
-            android:textColor="@color/colorText"
-            android:gravity="center"
-            android:text="猜你喜欢"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <ImageView
-        android:id="@+id/toolLineImageView"
-        android:contentDescription="tab"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:background="@mipmap/tab_selected_pressed_holo"
+        android:layout_height="48dip"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        app:pstsShouldExpand="true"
         />
-    <View
-        android:background="#ffffff"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/moviePageViewPager"
         android:layout_width="match_parent"
+        android:layout_gravity="center"
         android:layout_weight="1"
         android:layout_height="0dp">
+       <!-- <android.support.v4.view.PagerTabStrip
+            android:id="@+id/tabs"
+            android:layout_width="wrap_content"
+            android:textColor="#ffffff"
+            android:background="@color/colorPrimary"
+            android:textSize="18sp"
+            android:layout_height="50dp" />-->
     </android.support.v4.view.ViewPager>
 </LinearLayout>
