最近效率很低，好多东西不会做。但还是要坚持下去

--- a/app/src/main/res/layout/activity_search_movie.xml
+++ b/app/src/main/res/layout/activity_search_movie.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="lzl.edu.com.movierecommend.activity.SearchMovieActivity">
-
-    <include layout="@layout/toolbar"/>
+    tools:context="lzl.edu.com.movierecommend.activity.fragment.SearchFragment">
 
 </RelativeLayout>
