--- a/app/src/main/res/layout/activity_nativation_drawer.xml
+++ b/app/src/main/res/layout/activity_nativation_drawer.xml
@@ -7,9 +7,21 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <include layout="@layout/activity_movie_page"/>
+    <include
+        android:id="@+id/program_toolbar"
+        layout="@layout/toolbar"/>
 
+    <FrameLayout
+        android:id="@+id/mFragment"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        />
+    </LinearLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
