--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -1,15 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.NavigationDrawerActivity">
+    android:layout_height="match_parent">
 
     <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/tabs"
+        android:id="@+id/commentsTabs"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorRed"
         android:layout_height="48dip"
         android:textColor="#ffffff"
         android:textSize="16sp"
@@ -17,7 +16,7 @@
         app:pstsIndicatorHeight="3dp"
         />
     <android.support.v4.view.ViewPager
-        android:id="@+id/moviePageViewPager"
+        android:id="@+id/commentsViewPager"
         android:layout_width="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
