--- a/app/src/main/res/layout/fragment_hot_movie.xml
+++ b/app/src/main/res/layout/fragment_hot_movie.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
+    android:id="@+id/line1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="lzl.edu.com.movierecommend.activity.fragment.HotMovieActivity">
-<TextView
-    android:text="最热电影"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
-</RelativeLayout>
+    >
+<GridView
+    android:id="@+id/gridView"
+    android:layout_marginTop="5dp"
+    android:columnWidth="50dp"
+    android:numColumns="auto_fit"
+    android:verticalSpacing="5dp"
+    android:horizontalSpacing="5dp"
+    android:stretchMode="columnWidth"
+    android:gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+</GridView>
+</LinearLayout>
