--- a/app/src/main/res/menu/activity_nativation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_nativation_drawer_drawer.xml
@@ -9,6 +9,7 @@
         <item
             android:id="@+id/nav_gallery"
             android:icon="@mipmap/ic_home_white_24dp"
+            android:checked="true"
             android:title="首页" />
         <item
             android:id="@+id/nav_slideshow"
