效率低下，技术太渣。一点点更新吧

--- a/app/src/main/res/layout/fragment_hot_movie.xml
+++ b/app/src/main/res/layout/fragment_hot_movie.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:id="@+id/line1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-<GridView
-    android:id="@+id/gridView"
-    android:layout_marginTop="5dp"
-    android:columnWidth="50dp"
-    android:numColumns="auto_fit"
-    android:verticalSpacing="5dp"
-    android:horizontalSpacing="5dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-</GridView>
-</LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/hotMovieRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+</FrameLayout>
