--- a/app/src/main/res/layout/activity_you_love_movie.xml
+++ b/app/src/main/res/layout/activity_you_love_movie.xml
@@ -8,8 +8,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="lzl.edu.com.movierecommend.activity.fragment.HotMovieActivity">
-<TextView
-    android:text="你喜欢的电影"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/youLoveRecyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+</android.support.v7.widget.RecyclerView>
 </RelativeLayout>
