--- a/app/src/main/res/layout/item_images.xml
+++ b/app/src/main/res/layout/item_images.xml
@@ -4,6 +4,6 @@
     android:layout_height="match_parent">
 <ImageView
     android:id="@+id/movieImageViewPagers"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:layout_width="match_parent"
+    android:layout_height="100dp" />
 </LinearLayout>
