--- a/app/src/main/res/layout/activity_latest_movie.xml
+++ b/app/src/main/res/layout/activity_latest_movie.xml
@@ -4,11 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="lzl.edu.com.movierecommend.activity.fragment.LatestMovieFragment">
-
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/latestMovieRecyclerView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</android.support.v7.widget.RecyclerView>
-
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/lastestFreshLayout"
+    android:layout_centerHorizontal="true"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/latestMovieRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
+</android.support.v4.widget.SwipeRefreshLayout>
+    <TextView
+        android:id="@+id/reLoadData_tv"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:text="重新加载数据"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
