--- a/app/src/main/res/layout/activity_scrolling_movie.xml
+++ b/app/src/main/res/layout/activity_scrolling_movie.xml
@@ -6,7 +6,14 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="lzl.edu.com.movierecommend.activity.ScrollingMovieActivity">
+    <android.support.v4.widget.ContentLoadingProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
 
+        android:layout_gravity="center_horizontal"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -21,9 +28,8 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-            <ImageView
+            <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/scroll_movieImageView"
-                android:src="@mipmap/image1"
                 android:scaleType="centerCrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -39,29 +45,16 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
-
-    <!--<include layout="@layout/content_scrolling_movie" />-->
-     <!--   <android.support.v7.widget.RecyclerView
-            android:id="@+id/itemMovieRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </android.support.v7.widget.RecyclerView>-->
-  <!--  <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
+    <LinearLayout
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
-<LinearLayout
-    android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/itemMovieRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-</LinearLayout>
-    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+        android:layout_height="wrap_content">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/itemMovieRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
