--- a/app/src/main/res/menu/menu_scrolling_movie.xml
+++ b/app/src/main/res/menu/menu_scrolling_movie.xml
@@ -9,13 +9,13 @@
         android:icon="@mipmap/ic_search_white_24dp"
         android:title="搜索"
         app:showAsAction="ifRoom" />
-
+<!--
     <item
         android:id="@+id/scroll_collection"
         android:orderInCategory="100"
         android:icon="@mipmap/ic_favorite_border_white_24dp"
         android:title="收藏"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom" />-->
     <item
         android:id="@+id/scroll_share"
         android:orderInCategory="100"
